minimal/ingress-minimal-web.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minimal-web
  namespace: minimal
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - traefik-ui.minsky.cc
      secretName: traefik-ui.minsky.cc-cert
  rules:
    - host: traefik-ui.minsky.cc
      http:
        paths:
          - path: /
            backend:
              serviceName: traefik-web-ui
              servicePort: web
